# bactria

./: CMakeLists.txt  README.md  group__bactria__reports__internal.html  reports_2Plugin_8hpp_source.html
.github/workflows/: gh-pages.yml
cmake/: bactriaCommon.cmake  bactriaConfig.cmake.in
docs/: CMakeLists.txt
include/bactria/reports/: Plugin.hpp
src/metrics/: CMakeLists.txt
src/metrics/scorep/: CMakeLists.txt
src/ranges/nvtx/: CMakeLists.txt
src/ranges/roctx/: CMakeLists.txt
src/ranges/stdout/: CMakeLists.txt
src/reports/json/: CMakeLists.txt
